Fix row data flickering on refresh

--- a/src/components/AppSummary/_AppSummary.scss
+++ b/src/components/AppSummary/_AppSummary.scss
@@ -20,6 +20,7 @@
     display: flex;
     flex-wrap: wrap;
     max-width: 1000px;
+    min-height: 390px;
     align-items: flex-start;
     justify-content: space-between;
     margin-bottom: 35px;
